/*
Copyright Â© 2021-2022 Infinite Devices GmbH, Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package infinimesh.state;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message VersionedValue {
  uint64 version = 1;
  google.protobuf.Value data = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message State {
  VersionedValue reported = 1;
  VersionedValue desired = 2;
}

message GetRequest {
  repeated string ids = 1;
}
message GetResponse {
  map<string, State> states = 1;
}

message StreamStateRequest {
  string id = 1;
}

message PostRequest {
  string id = 1;
  google.protobuf.Value data = 2;
}

message EmptyMessage {}

service StateService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Patch(google.protobuf.Value) returns (EmptyMessage);
  rpc Post(PostRequest) returns (EmptyMessage);
  rpc StreamState(StreamStateRequest) returns (stream State);
}